rename resume.html to index.html for ease of use w/ github pages. also rename resume.html usages
Signed-off-by: Reed McFadden <reed.mcfadden@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           wkhtmltopdf \
             --enable-local-file-access \
-            public/resume.html public/resume.pdf
+            public/index.html public/resume.pdf
 
       - name: Upload timestamped PDF artifact
         uses: actions/upload-artifact@v4
