--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Upload site content
         uses: actions/upload-pages-artifact@v3
         with:
-          path: /
+          path: .
 
   deploy:
     needs: build
