change resume naming formatting to pascal case with underscores
Signed-off-by: Reed McFadden <reed.mcfadden@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: resume-${{ steps.timestamp.outputs.ts }}
-          path: reed-m-mcfadden-resume.pdf
+          path: Reed_McFadden_Resume.pdf
 
       - name: Commit latest reed-m-mcfadden-resume.pdf to repo
         run: |
